--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -13,6 +13,6 @@
     "express": "^4.18.2",
     "puppeteer": "^24.3.0",
     "qrcode": "^1.5.3",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js"
   }
 }
