--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^7.0.0",
